# rag

./: .gitignore  README.md  db_utils.py  embed.py  example_db_utils.py  example_embed.py  example_retrieval.py  pyproject.toml  requirements.txt  retrieval.py
notebooks/: example_databases.ipynb  example_embed_retrieve.ipynb  requirements.txt
notebooks/examples/: database.ipynb  embed_and_retrieve.ipynb
src/: db_utils.py  embed.py  generation.py  ollama_utils.py  ollama_win.py  retrieval.py
