[project]
name = "rag"
version = "0.1.0"
description = "A Python project to implement a rag system using Postgres, PGVector and some other libraries."
authors = ["Richard Costa <scosta.richard@gmail.com>"]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.1",
    "ollama>=0.4.8",
    "psycopg[binary]>=3.2.5",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.3.1",
]
